Preparations for the Avatar Dynamics update

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 SMTaK/Shaders/DefaultToon.shader.meta
 SMTaK/Shaders/DefaultToon.shader
 SMTaK/Shaders.meta
+SMTaK/Script/Editor/AnimationToggleClipGenerator.cs.meta
+SMTaK/Script/Editor/AnimationToggleClipGenerator.cs
